--- a/index.html
+++ b/index.html
@@ -4,24 +4,138 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- this is css file of bootstrab -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <!-- this is css file of font owesome library -->
+    <link rel="stylesheet" href="css/all.min.css" />
+    <!-- this is my own css file -->
     <link rel="stylesheet" href="css/style.css" />
     <title>the-project</title>
   </head>
   <body>
-    <div class="header mt-5">
+    <!-- start navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">Logo</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span style="color: #fff;" class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">important-fields</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About-us</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="#">contact-us</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- end navbar -->
+
+    <!-- start header -->
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-7 col-sm-12">
+          <h1 class="header-title">
+            start learn and
+            <span class="text-success">
+              develop <br />
+              yourself
+            </span>
+            in your career
+          </h1>
+          <p class="header-text mb-4">
+            join metings online, watch important videos and take courses about
+            your career this website is made to help you to develop your self on
+            your career or your work, my goal is make you able to arrive to all
+            useful sources in your field .
+          </p>
+          <a href="#" class="btn header-link btn-outline-success mb-5">
+            join now
+          </a>
+        </div>
+        <div class="col-lg-5 col-sm-12">
+          <div class="header-img"></div>
+        </div>
+      </div>
+    </div>
+    <!-- end header -->
+
+    <!-- start services section -->
+    <div class="services">
       <div class="container">
         <div class="row">
-          <div class="mt-5" style="margin: 20px 0;">
-            <h2 class="text-center text-light text-capitalize">
-              important fields
-            </h2>
+          <h2 class="services-title text-center">
+            our services
+          </h2>
+          <p class="text-center services-text" style="margin-bottom: 45px;">
+            we have a lot of amazing features that you will make benfit from
+            them
+          </p>
+          <div class="col-lg-4 text-center">
+            <i class="fas fa-search fa-3x"></i>
+            <h3 class="mt-3 icon-title">Search</h3>
+            <p class="mt-2 mb-5 services-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consectetur iure quae tempore placeat sed fugit id dolor
+            </p>
           </div>
-          <div class="col-lg-4 col-sm-6 co-12">
+          <div class="col-lg-4 text-center">
+            <i class="fas fa-laptop-medical fa-3x"></i>
+            <h3 class="mt-3 icon-title">Learn Effectively</h3>
+            <p class="mt- mb-5 services-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consectetur iure quae tempore placeat sed fugit id dolor
+            </p>
+          </div>
+          <div class="col-lg-4 text-center">
+            <i class="fas fa-book-reader fa-3x"></i>
+            <h3 class="mt-3 icon-title">Get Knowledge</h3>
+            <p class="mt-2 mb-5 services-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consectetur iure quae tempore placeat sed fugit id dolor
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End services section -->
+
+    <!-- start important fields -->
+    <div class="fields">
+      <div class="container">
+        <div class="row">
+          <h2 class="text-center text-light mt-5 mb-5 text-capitalize">
+            important fields
+          </h2>
+
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-              <div class="card-img" style="height: 50%;">
-                <img src="images/graphic.jpg" class="card-img-top" alt="..." />
-              </div>
+              <img
+                src="images/programming.jpg"
+                class="card-img-top"
+                alt="..."
+              />
               <div class="card-body">
                 <h5 class="card-title">Learn Programming</h5>
                 <hr />
@@ -29,84 +143,121 @@
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="btn btn-primary">Go to this field</a>
+                <a href="#" class="btn btn-outline-success"
+                  >Go to this field &nbsp; >></a
+                >
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-sm-6 co-12">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="card">
               <img src="images/graphic.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Learn Graphic Design</h5>
+                <hr />
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-outline-success">Go somewhere</a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-sm-6 co-12">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-              <img src="images/graphic.jpg" class="card-img-top" alt="..." />
+              <img
+                src="images/programming.jpg"
+                class="card-img-top"
+                alt="..."
+              />
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
+                <hr />
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-outline-success">Go somewhere</a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-sm-6 co-12">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-              <img src="images/graphic.jpg" class="card-img-top" alt="..." />
+              <img
+                src="images/programming.jpg"
+                class="card-img-top"
+                alt="..."
+              />
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
+                <hr />
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-outline-success">Go somewhere</a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-sm-6 co-12">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-              <img src="images/graphic.jpg" class="card-img-top" alt="..." />
+              <img
+                src="images/programming.jpg"
+                class="card-img-top"
+                alt="..."
+              />
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
+                <hr />
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-outline-success">Go somewhere</a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-sm-6 co-12">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-              <img src="images/graphic.jpg" class="card-img-top" alt="..." />
+              <img
+                src="images/programming.jpg"
+                class="card-img-top"
+                alt="..."
+              />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Learn Programming</h5>
+                <hr />
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-outline-success">Go somewhere</a>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <!-- end importnat fields -->
 
+    <!-- start about-us section -->
+    <div class="about-us">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-5"></div>
+          <div class="col-lg-7"></div>
+        </div>
+      </div>
+    </div>
+    <!-- end about-us section -->
+
+    <!-- this is js fontowesome library -->
+    <script src="js/all.min.js"></script>
     <!-- this is js bootstrap file -->
     <script src="js/bootstrap.min.js"></script>
   </body>
