Deployment from Codesandbox.

--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
               <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">services</a>
+              <a class="nav-link" href="#services">services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">important-fields</a>
+              <a class="nav-link" href="#fields">important-fields</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About-us</a>
+              <a class="nav-link" href="#about-us">About-us</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">contact-us</a>
+              <a class="nav-link" href="#contact-us">contact-us</a>
             </li>
           </ul>
         </div>
@@ -55,7 +55,7 @@
     <!-- start header -->
     <div class="container">
       <div class="row">
-        <div class="col-lg-7 col-sm-12">
+        <div class="col-lg-7 col-md-6 col-sm-12">
           <h1 class="header-title">
             start learn and
             <span class="text-success">
@@ -74,7 +74,7 @@
             join now
           </a>
         </div>
-        <div class="col-lg-5 col-sm-12">
+        <div class="col-lg-5 col-md-6 col-sm-12">
           <div class="header-img"></div>
         </div>
       </div>
@@ -82,7 +82,7 @@
     <!-- end header -->
 
     <!-- start services section -->
-    <div class="services">
+    <div class="services" id="services">
       <div class="container">
         <div class="row">
           <h2 class="services-title text-center">
@@ -122,7 +122,7 @@
     <!-- End services section -->
 
     <!-- start important fields -->
-    <div class="fields">
+    <div class="fields" id="fields">
       <div class="container">
         <div class="row">
           <h2 class="text-center text-light mt-5 mb-5 text-capitalize">
@@ -160,7 +160,43 @@
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="btn btn-outline-success">Go somewhere</a>
+                <a href="#" class="btn btn-outline-success"
+                  >Go to this field &nbsp; >></a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <div class="card">
+              <img src="images/marketing.jpg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Learn Degital Marketing</h5>
+                <hr />
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-outline-success"
+                  >Go to this field &nbsp; >></a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <div class="card">
+              <img src="images/video.jpg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Learn Video Editing</h5>
+                <hr />
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-outline-success"
+                  >Go to this field &nbsp; >></a
+                >
               </div>
             </div>
           </div>
@@ -168,75 +204,37 @@
           <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="card">
               <img
-                src="images/programming.jpg"
+                src="images/data-analysis.jpg"
                 class="card-img-top"
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Learn Data Analysis</h5>
                 <hr />
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="btn btn-outline-success">Go somewhere</a>
+                <a href="#" class="btn btn-outline-success"
+                  >Go to this field &nbsp; >></a
+                >
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-              <img
-                src="images/programming.jpg"
-                class="card-img-top"
-                alt="..."
-              />
+              <img src="images/ui-ux.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Learn UI/UX Design</h5>
                 <hr />
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="btn btn-outline-success">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="card">
-              <img
-                src="images/programming.jpg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <hr />
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-outline-success">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="card">
-              <img
-                src="images/programming.jpg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">Learn Programming</h5>
-                <hr />
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-outline-success">Go somewhere</a>
+                <a href="#" class="btn btn-outline-success"
+                  >Go to this field &nbsp; >></a
+                >
               </div>
             </div>
           </div>
@@ -246,15 +244,89 @@
     <!-- end importnat fields -->
 
     <!-- start about-us section -->
-    <div class="about-us">
+    <div class="about-us" id="about-us">
       <div class="container">
         <div class="row">
-          <div class="col-lg-5"></div>
-          <div class="col-lg-7"></div>
+          <h2
+            class="text-capitalize text-light text-center"
+            style="margin-top: 10%;"
+          >
+            about-us
+          </h2>
+          <div class="col-lg-12">
+            <p class="text-center text-light mt-2">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa
+              eius ipsa hic veritatis adipisci enim unde modi amet consequatur
+              nesciunt aperiam temporibus deserunt porro, distinctio perferendis
+              animi, illum maxime totam! Lorem ipsum dolor sit amet consectetur
+            </p>
+            <div class="icons text-center">
+              <i class="fab face fa-facebook-f fa-2x"></i>
+              <i class="fab twitter fa-twitter fa-2x"></i>
+              <i class="fab insta fa-instagram fa-2x"></i>
+            </div>
+          </div>
         </div>
       </div>
     </div>
     <!-- end about-us section -->
+
+    <!-- start contact us -->
+    <div class="contact-us text-light bg-success">
+      <div class="container">
+        <form class="row g-3">
+          <h2 class="text-center">Contact us</h2>
+          <div class="col-md-6">
+            <label for="first-name" class="form-label">
+              First Name
+            </label>
+            <input type="text" class="form-control" id="first-name" required />
+          </div>
+          <div class="col-md-6">
+            <label for="last-name" class="form-label">
+              Last Name
+            </label>
+            <input type="text" class="form-control" id="last-name" required />
+          </div>
+          <div class="col-md-8">
+            <label for="email" class="form-label">E-mail</label>
+            <input type="email" id="email" class="form-control" required />
+          </div>
+          <div class="col-md-4">
+            <label for="phone" class="form-label">Phone Number</label>
+            <input
+              type="text"
+              class="form-control"
+              id="phone"
+              placeholder="+20 11 2709 6274"
+            />
+          </div>
+          <div class="col-md-12">
+            <label for="message" class="form-label">Message</label>
+            <textarea rows="3" class="form-control" id="message"> </textarea>
+          </div>
+          <div class="col-md-12 text-center">
+            <button type="submit" class="btn btn-outline-light mb-5">
+              Submit
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <!-- end contact us -->
+
+    <!-- start footer -->
+    <footer class="bg-success text-light text-center text-lg-start mt-5">
+      <!-- Copyright -->
+      <div
+        class="text-center p-3"
+        style="background-color: rgba(0, 0, 0, 0.2); margin-top: 100px;"
+      >
+        © 2022 Copyright.by Out Team
+      </div>
+      <!-- Copyright -->
+    </footer>
+    <!-- end footer -->
 
     <!-- this is js fontowesome library -->
     <script src="js/all.min.js"></script>
