--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#contact-us">contact-us</a>
+              <a class="nav-link" href="#contact">contact-us</a>
             </li>
           </ul>
         </div>
@@ -272,7 +272,7 @@
     <!-- end about-us section -->
 
     <!-- start contact us -->
-    <div class="contact-us text-light bg-success">
+    <div class="contact-us text-light bg-success id="contact">
       <div class="container">
         <form class="row g-3">
           <h2 class="text-center">Contact us</h2>
